# CFAR-Detector

./: .gitignore  CFARDetector.pro  CMakeLists.txt  README.md  cfardetector.cpp  cfardetector.h  mainwindow.ui  resources.qrc
src/: cfardetector.cpp  cfardetector.cpp.autosave  cfardetector.h  generate_cfar_test_data.cpp  mainwindow.cpp  mainwindow.h
styles/: creamy.qss  dark.qss  light.qss
